--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv-cli": "^7.4.2",
     "express": "^4.19.2",
     "http-status-codes": "^2.3.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "pino": "^9.3.2",
     "pino-pretty": "^11.2.2",
@@ -31,6 +32,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.5.0",
     "@types/pino": "^7.0.5",
